# VisageDvachevsky-StoryGraph

./: .clang-format  .gitignore  .pre-commit-config.yaml  .semgrepignore  CLAUDE.md  CMakeLists.txt  CODE_REVIEW_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  FILE_REVIEW_MATRIX.md  FINAL_GATE_AUDIT_REPORT.md  FOLLOWUP_AUDIT_2026_01_12.md  README.md  UI_ANALYSIS_REPORT.md  ULTRA_AUDIT_REPORT.md  cppcheck_report.txt  issue-179-details.json  pr-196-details.json
editor/: CMakeLists.txt
editor/docs/: ICON_SYSTEM.md
editor/include/NovelMind/editor/: asset_pipeline.hpp  asset_preview.hpp  build_size_analyzer.hpp  build_size_report.hpp  build_size_scanner.hpp  build_size_ui.hpp  build_system.hpp  crash_safety.hpp  curve_editor.hpp  editor_runtime_host.hpp  editor_settings.hpp  editor_state.hpp  error_reporter.hpp  event_bus.hpp  hotkeys_manager.hpp  inspector_binding.hpp  project_asset_tracker.hpp  project_graph_analyzer.hpp  project_integrity.hpp  project_json.hpp  project_manager.hpp  project_validators.hpp  scene_document.hpp  scene_registry.hpp  scene_template_manager.hpp  script_project_context.hpp  script_reference_map.hpp  selection_system.hpp  settings_migration.hpp  settings_persistence.hpp  settings_registry.hpp  settings_type_handlers.hpp  settings_validation.hpp  timeline_editor.hpp  timeline_playback.hpp  (+2 more)
editor/resources/: editor_resources.qrc
editor/src/: asset_pipeline.cpp  asset_preview.cpp  build_assets.cpp  build_crypto.cpp  build_integrity.cpp  build_pack.cpp  build_platform.cpp  build_scripts.cpp  build_size_analyzer.cpp  build_size_report.cpp  build_size_scanner.cpp  build_size_ui.cpp  build_system.cpp  build_utils.cpp  curve_editor.cpp  curve_editor_library.cpp  curve_editor_view.cpp  editor_runtime_host.cpp  editor_runtime_host_breakpoints.cpp  editor_runtime_host_detail.cpp  editor_runtime_host_detail.hpp  editor_runtime_host_hot_reload.cpp  editor_runtime_host_inspection.cpp  editor_runtime_host_runtime.cpp  editor_runtime_host_save.cpp  editor_settings.cpp  editor_state.cpp  error_reporter.cpp  event_bus.cpp  hotkeys_manager.cpp  inspector_binding.cpp  project_asset_tracker.cpp  project_assets.cpp  project_graph_analyzer.cpp  project_graph_cycles.cpp  project_integrity.cpp  project_json.cpp  project_lifecycle.cpp  project_manager.cpp  project_quickfixes.cpp  (+19 more)
editor/src/adapters/: QtAudioPlayer.cpp  QtFileSystem.cpp
editor/src/core/: ServiceLocator.cpp
editor/src/guided_learning/: anchor_registry.cpp  help_overlay.cpp  tutorial_manager.cpp  tutorial_subsystem.cpp  tutorial_types.cpp
editor/src/mediators/: panel_mediators.cpp  playback_mediator.cpp  property_mediator.cpp  scene_mediator.cpp  scene_registry_mediator.cpp  selection_mediator.cpp  workflow_mediator.cpp
editor/src/qt/: debouncer.cpp  editor_capabilities_check.cpp  lazy_thumbnail_loader.cpp  main.cpp  navigation_location.cpp  nm_bezier_curve_editor_dialog.cpp  nm_color_dialog.cpp  nm_command_palette.cpp  nm_dialogs_detail.cpp  nm_dialogs_detail.hpp  nm_dock_panel.cpp  nm_dock_title_bar.cpp  nm_file_dialog.cpp  nm_fuzzy_matcher.cpp  nm_hotkeys_dialog.cpp  nm_icon_manager.cpp  nm_input_dialog.cpp  nm_main_window.cpp  nm_main_window_connections.cpp  nm_main_window_layout.cpp  nm_main_window_menu.cpp  nm_main_window_panels.cpp  nm_main_window_runtime.cpp  nm_message_dialog.cpp  nm_new_project_dialog.cpp  nm_new_scene_dialog.cpp  nm_play_mode_controller.cpp  nm_scrollable_toolbar.cpp  nm_settings_dialog.cpp  nm_style_manager.cpp  nm_style_manager_stylesheet.cpp  nm_undo_manager.cpp  nm_voice_metadata_dialog.cpp  nm_welcome_dialog.cpp  performance_metrics.cpp  qt_event_bus.cpp  qt_selection_manager.cpp  timeline_render_cache.cpp
editor/templates/branching_story/: CHOICES_FLOWCHART.md  CREDITS.md  README.md  project.json  template.json
editor/templates/demo_branching_novel/: CREDITS.md  README.md  project.json  template.json
editor/templates/empty_project/: CREDITS.md  README.md  project.json  template.json
editor/templates/kinetic_novel/: CREDITS.md  README.md  project.json  template.json
editor/templates/mobile_optimized/: CREDITS.md  README.md  project.json  template.json
editor/templates/tutorial_project/: CREDITS.md  README.md  project.json  template.json
runtime/: CMakeLists.txt
runtime/src/: game_launcher_main.cpp  main.cpp
tests/: CMakeLists.txt  multi_object_editing_test.cpp  scene_object_properties_test.cpp
tests/fuzz/: CMakeLists.txt  README.md  fuzz_lexer.cpp  fuzz_parser.cpp  fuzz_vm.cpp
tests/integration/: test_animation_integration.cpp  test_asset_browser.cpp  test_editor_runtime.cpp  test_editor_settings.cpp  test_playback_source_mode.cpp  test_project_json.cpp  test_scene_document_events.cpp  test_scene_id_picker.cpp  test_scene_registry.cpp  test_scene_template_manager.cpp  test_scene_validation.cpp  test_scene_view_panel.cpp  test_scene_workflow.cpp  test_script_editor.cpp  test_settings_concurrency.cpp  test_settings_registry.cpp  test_ui_panel_features.cpp  test_voice_manager.cpp
tests/unit/: test_abstraction_interfaces.cpp  test_animation.cpp  test_audio_manager.cpp  test_audio_playback.cpp  test_audio_recorder.cpp  test_benchmarks.cpp  test_build_size_analyzer.cpp  test_build_system.cpp  test_cached_file_system.cpp  test_clipboard.cpp  test_compiler.cpp  test_compiler_float_serialization.cpp  test_dialogue_box.cpp  test_dialogue_localization.cpp  test_division_safety.cpp  test_endian_serialization.cpp  test_error_messages.cpp  test_event_bus.cpp  test_event_bus_stress.cpp  test_fuzzing.cpp  test_gizmo_dpi_scaling.cpp  test_gizmo_memory.cpp  test_gizmo_rotation_normalization.cpp  test_input_manager.cpp  test_interpreter_deserialize.cpp  test_ir_conversion_safety.cpp  test_lexer.cpp  test_localization_manager.cpp  test_memory_fs.cpp  test_pack_reader.cpp  test_parser.cpp  test_performance_cache.cpp  test_project_integrity.cpp  test_property_mediator.cpp  test_recording_callback_marshaling.cpp  test_recording_panel_thread_safety.cpp  test_renderer_pipeline.cpp  test_resource_cache.cpp  test_resource_id.cpp  test_resource_manager.cpp  (+27 more)
(+519 files in other folders)
